--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.5",
-    "sass": "^1.80.6",
+    "sass": "^1.69.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "prettier": "^3.3.3",
     "vite": "^5.4.10"
   }
 }
